Fix alignment on large devices

--- a/styles.css
+++ b/styles.css
@@ -77,9 +77,13 @@ nav {
     display: flex;
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    -webkit-align-items: center;
+    -webkit-align-items:
     align-items: center;
     max-width: 600px;
+  }
+
+  h1 {
+    padding: 8px 8px 8px 0px;
   }
 
   nav {
